--- a/views/editar.ejs
+++ b/views/editar.ejs
@@ -9,9 +9,9 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="viewport"
     content="width=device-width, height=device-height, initial-scale=1, maximum-scale=1, user-scalable=no" />
-  <link rel="stylesheet" href="./css/style.css">
-  <link rel="stylesheet" href="./css/nav.css">
-  <link rel="stylesheet" href="./css/editar.css">
+  <link rel="stylesheet" href="../css/style.css">
+  <link rel="stylesheet" href="../css/nav.css">
+  <link rel="stylesheet" href="../css/editar.css">
   <title>Game Catalogo | Editar</title>
 </head>
 
@@ -20,62 +20,66 @@
     <a class="logo " href="/" data-scroll>Game Catalogo</a>
 
     <nav class="nav-collapse">
-    <ul>
+      <ul>
         <li class="menu-item active"><a href="/" data-scroll>Home</a></li>
         <li class="menu-item"><a href="/sobre" data-scroll>Quem somos</a></li>
         <li class="menu-item"><a href="/cadastro" data-scroll>Cadrastro</a></li>
-        <li class="menu-item"><a href="/login" data-scroll>Login</a></li>
-    
-        </ul>
+
+      </ul>
     </nav>
-</article>
+  </article>
 
-    <% if(message != "") {  %>
-        <section id="message">
-            <p><%= message %></p> <span id="close">&times;</span>
-        </section>
-    <% }  %>
-    
-    <% if(jogo != null) {  %>
-    <section id="editar">
-        <form action="/editar/<%= jogo.id %>" method="POST">
-            <div>
-                <label for="nome">Nome do jogo: </label>
-                <input type="text" name="nome" id="nome" placeholder="" value="<%= jogo.nome %>"required>
-            </div>
-        
-            <div>
-                <label for="descricao">Descricao: </label>
-                <input type="text" name="descricao" id="descricao" placeholder="" value="<%= jogo.descricao %>"required>
-            </div>
-            <div>
-                <label for="imagem">Imagem: </label>
-                <input type="text" name="imagem" id="imagem" placeholder="" value="<%= jogo.imagem %>"required>
-            </div>
-            <div>
-              <label for="genero">Genero: </label>
-              <input type="text" name="genero" id="genero" placeholder="" value="<%= jogo.genero %>" required>
-            </div>
-            <button type="submit">Editar</button>
-        </form>
-    </section>
-    <% }  %>
+  <header id="registrar">
+    <h1>Editar jogo</h1>
+  </header>
 
+  <% if(message != "") {  %>
+  <section id="message">
+    <p><%= message %></p> <span id="close">&times;</span>
+  </section>
+  <% }  %>
 
+  <% if(jogo != null) {  %>
+  <section id="editar">
+    <form action="/editar/<%= jogo.id %>" method="POST">
+      <div class="label-editar">
+        <input type="text" name="nome" id="nome" placeholder="" value="<%= jogo.nome %>" required>
+        <label for="nome">Nome do jogo: </label>
+      </div>
 
-
-<footer>
-  <p>Projeto final | Blue | M02</br>
-    <a href="https://www.linkedin.com/in/danusajesus" target="_blank" target="_blank">Danusa Jesus</a> |
-    <a href="https://www.linkedin.com/in/pedro-henrique-soares-da-luz-40b18b21a/" target="_blank" target="_blank"> Pedro Henhique </a>
-  </p>
-</footer>
+      <div class="label-editar">
+        <input type="text" name="descricao" id="descricao" placeholder="" value="<%= jogo.descricao %>" required>
+        <label for="descricao">Descricao: </label>
+      </div>
+      <div class="label-editar">
+        <input type="text" name="imagem" id="imagem" placeholder="" value="<%= jogo.imagem %>" required>
+        <label for="imagem">Imagem: </label>
+      </div>
+      <div class="label-editar">
+        <input type="text" name="genero" id="genero" placeholder="" value="<%= jogo.genero %>" required>
+        <label for="genero">Genero: </label>
+      </div>
+      <button type="submit">Editar</button>
+    </form>
+  </section>
+  <% }  %>
 
 
-<script src="../js/fixed-responsive-nav.js"></script>
-<script src="../js/responsive-nav.js"></script>
-<script src="/js/nav.js"></script>
-<script src="/js/script.js"></script>
+
+
+  <footer>
+    <p>Projeto final | Blue | M02</br>
+      <a href="https://www.linkedin.com/in/danusajesus" target="_blank" target="_blank">Danusa Jesus</a> |
+      <a href="https://www.linkedin.com/in/pedro-henrique-soares-da-luz-40b18b21a/" target="_blank" target="_blank">
+        Pedro Henhique </a>
+    </p>
+  </footer>
+
+
+  <script src="../js/fixed-responsive-nav.js"></script>
+  <script src="../js/responsive-nav.js"></script>
+  <script src="/js/nav.js"></script>
+  <script src="/js/script.js"></script>
 </body>
 
 </html>
