--- a/views/index.ejs
+++ b/views/index.ejs
@@ -12,21 +12,19 @@
   <link rel="stylesheet" href="./css/style.css">
   <link rel="stylesheet" href="./css/nav.css">
   <link rel="stylesheet" href="./css/carousel.css">
-  <title>Game Catalog</title>
+  <title>Game Catalogo</title>
 </head>
 
 <body>
 
   <article>
-    <a class="logo " data-scroll>Game Catalogo</a>
+    <a class="logo " href="/" data-scroll>Game Catalogo</a>
 
     <nav class="nav-collapse">
       <ul>
-        <li class="menu-item active"><a href="/" data-scroll>Home</a></li>
-        <li class="menu-item"><a href="/sobre" data-scroll>Quem somos</a></li>
-        <li class="menu-item"><a href="/cadastro" data-scroll>Cadrastro</a></li>
-        <li class="menu-item"><a href="/login" data-scroll>Login</a></li>
-      
+        <li><a href="/" data-scroll>Home</a></li>
+        <li><a href="/sobre" data-scroll>Quem somos</a></li>
+        <li><a href="/cadastro" data-scroll>Cadrastro</a></li>
       </ul>
     </nav>
   </article>
@@ -48,7 +46,7 @@
   <figure class="destaques">
     <div class="imagem">
       <a href="https://www.ea.com/pt-br/games/fifa/fifa-22/buy" target="_blank">
-        <img src="/img/Fifa2021.jpg" alt="Fifa 2022" width="103%" >
+        <img src="/img/Fifa2021.jpg" alt="Fifa 2022" width="103%">
         <figcaption> Clique para mais Informações</figcaption>
       </a>
       <a href="https://www.rockstargames.com/V/br/info" target="_blank">
@@ -58,35 +56,43 @@
     </div>
   </figure>
 
-<section id="jogos">
-    <h3>Lista de Game:</h3>
-    <% jogos.forEach(item => { %>
-        <section class="card">
-                <ul>
-                    <li>Nome: <%= item.nome %></li>
-                    <li>Descrição: <%= item.descricao %></li>
-                    <a href="/detalhes/<%= item.id %>">
-                        <img src="<%= item.imagem %>" width=200>
-                    </a>
-                </ul>
-                <a href ="/editar/<%= item.id %>">Editar</a>
-        </section>
-    <% }) %> 
-</section>
+  <% if(message != "") {  %>
+  <section id="message">
+    <p><%= message %></p> <span id="close">&times;</span>
+  </section>
+  <% }  %>
+
+  <section id="jogos">
+    <h2>Lista de Game:</h2>
+    <% jogo.forEach(item => { %>
+    <section class="card">
+      <ul>
+        <li>Nome: <%= item.nome %></li>
+        <li>Descrição: <%= item.descricao %></li>
+        <a href="/detalhes/<%= item.id %>">
+          <img src="<%= item.imagem %>" width=200>
+        </a>
+      </ul>
+      <button type><a href="/editar/<%= item.id %>">Editar</a></button>
+    </section>
+    <% }) %>
+  </section>
 
 
-<footer>
-  <p>Projeto final | Blue | M02</br>
-    <a href="https://www.linkedin.com/in/danusajesus" target="_blank" target="_blank">Danusa Jesus</a> |
-    <a href="https://www.linkedin.com/in/pedro-henrique-soares-da-luz-40b18b21a/" target="_blank" target="_blank"> Pedro Henhique </a>
-  </p>
-</footer>
+  <footer>
+    <p>Projeto final | Blue | M02</br>
+      <a href="https://www.linkedin.com/in/danusajesus" target="_blank" target="_blank">Danusa Jesus</a> |
+      <a href="https://www.linkedin.com/in/pedro-henrique-soares-da-luz-40b18b21a/" target="_blank" target="_blank">
+        Pedro Henhique </a>
+    </p>
+  </footer>
 
-<script src="../js/fastclick.js"></script>
-<script src="/js/scroll.js"></script>
-<script src="../js/fixed-responsive-nav.js"></script>
-<script src="../js/responsive-nav.js"></script>
-<script src="/js/nav.js"></script>
-<script src="/js/script.js"></script>
+  <script src="../js/fastclick.js"></script>
+  <script src="/js/scroll.js"></script>
+  <script src="../js/fixed-responsive-nav.js"></script>
+  <script src="../js/responsive-nav.js"></script>
+  <script src="/js/nav.js"></script>
+  <script src="/js/script.js"></script>
 </body>
+
 </html>
