--- a/views/login.ejs
+++ b/views/login.ejs
@@ -1,17 +1,18 @@
 <!DOCTYPE html>
 <html lang="pt-br">
 
-<head>
+<head>  
   <meta charset="UTF-8">
   <meta charset="utf-8" />
   <meta content="width=device-width, initial-scale=1, maximum-scale=1" name="viewport">
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta name="viewport" content="width=device-width, height=device-height, initial-scale=1, maximum-scale=1, user-scalable=no" />
+  <meta name="viewport"
+    content="width=device-width, height=device-height, initial-scale=1, maximum-scale=1, user-scalable=no" />
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
   <link rel="stylesheet" href="./css/style.css">
   <link rel="stylesheet" href="./css/nav.css">
   <link rel="stylesheet" href="./css/login.css">
-
   <title> Game Catalogo | Login</title>
 </head>
 
@@ -19,50 +20,48 @@
   <article>
     <a class="logo " href="/" data-scroll>Game Catalogo</a>
 
-
     <nav class="nav-collapse">
       <ul>
-        <li class="menu-item active"><a href="/" data-scroll>Home</a></li>
-        <li class="menu-item"><a href="/sobre" data-scroll>Quem somos</a></li>
-        <li class="menu-item"><a href="/cadastro" data-scroll>Cadrastro</a></li>
-        <li class="menu-item"><a href="/login" data-scroll>Login </a></li>
+        <li><a href="/" data-scroll>Home</a></li>
+        <li><a href="/sobre" data-scroll>Quem somos</a></li>
+        <li><a href="/cadastro" data-scroll>Cadrastro</a></li>
       </ul>
     </nav>
   </article>
 
-  <div class="container" >      
-      <div id="login">
-        <form action="/cadastrar" method="POST">
-          <h1>Login</h1> 
-          <div class="login">
-            <input type="email" name="email" id="email" placeholder="" required>
-            <label for="email">Seu Email</label>
-        </div>
-        <div class="login">
-          <input type="password" name="senha" id="senha" placeholder="" required>
-          <label for="senha">Sua Senha</label>
-        </div>
-        <div class="login">
-          <input type="checkbox" name="manterlogado" id="manterlogado" value=""> 
-          <label for="manterlogado">Manter-me logado</label>
-        </div>
-           
-          <input type="submit" value="Logar"> 
+  <div class="container">
+    <div id="login">
+      <h1>Login</h1>
+      <div id='msgError'></div>
+      <div class="login">
+        <input type="email" name="email" id="email" placeholder="" required>
+        <label id='emailLabel' for="email">Seu Email</label>
+      </div>
+      <div class="login">
+        <input type="password" name="senha" id="senha" placeholder="" required>
+        <label id='senhaLabel' for="senha">Sua Senha</label>
+      </div>
+      <div class="login">
+        <input type="checkbox" name="manterlogado" id="manterlogado" value="">
+        <label for="manterlogado">Manter-me logado</label>
+      </div>
 
-           
-          <p class="link">
-            Ainda não tem conta?
-            <a href="/cadusuario">Cadastre-se</a>
-          </p>
-        </form>
+      <button onclick='entrar()'> Entrar </button>
+
+
+      <p class="link">
+        Ainda não tem conta?
+        <a href="/cadusuario">Cadastre-se</a>
+      </p>
+
     </div>
-</div>
-    <script src="../js/fastclick.js"></script>
-    <script src="/js/scroll.js"></script>
-    <script src="../js/fixed-responsive-nav.js"></script>
-    <script src="../js/responsive-nav.js"></script>
-    <script src="/js/nav.js"></script>
-    <script src="/js/script.js"></script>
+  </div>
+  <script src="../js/fastclick.js"></script>
+  <script src="/js/scroll.js"></script>
+  <script src="../js/fixed-responsive-nav.js"></script>
+  <script src="../js/responsive-nav.js"></script>
+  <script src="/js/nav.js"></script>
+  <script src="/js/script.js"></script>
 
 </body>
 
