--- a/views/sobrenos.ejs
+++ b/views/sobrenos.ejs
@@ -3,15 +3,16 @@
 
 <head>
   <meta charset="UTF-8">
+  <meta charset="utf-8" />
   <meta content="width=device-width, initial-scale=1, maximum-scale=1" name="viewport">
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="viewport"
     content="width=device-width, height=device-height, initial-scale=1, maximum-scale=1, user-scalable=no" />
-  <link rel="stylesheet" href="./css/style.css">
-  <link rel="stylesheet" href="./css/nav.css">
-  <link rel="stylesheet" href="./css/sobre.css">
-  <title>Game Catalogo | Quem somos></title>
+  <link rel="stylesheet" href="../css/style.css">
+  <link rel="stylesheet" href="../css/nav.css">
+  <link rel="stylesheet" href="../css/sobre.css">
+  <title>Game Catalogo | Sobre>
 </head>
 
 <body>
@@ -21,16 +22,15 @@
 
     <nav class="nav-collapse">
       <ul>
-        <li class="menu-item active"><a href="/" data-scroll>Home</a></li>
-        <li class="menu-item"><a href="/sobre" data-scroll>Quem somos</a></li>
-        <li class="menu-item"><a href="/cadastro" data-scroll>Cadrastro</a></li>
-
+        <li><a href="/" data-scroll>Home</a></li>
+        <li><a href="/sobre" data-scroll>Quem somos</a></li>
+        <li><a href="/cadastro" data-scroll>Cadrastro</a></li>
       </ul>
     </nav>
   </article>
 
 
-  <header id="registrar">
+  <header id="Dev">
     <h1>
       <span style="font-weight: 200">Devs</span>
     </h1>
@@ -61,19 +61,20 @@
 
   </section>
 
+</body>
 
+<footer>
+  <p>Projeto final | Blue | M02</br>
+    <a href="https://www.linkedin.com/in/danusajesus" target="_blank" target="_blank">Danusa Jesus</a> |
+    <a href="https://www.linkedin.com/in/pedro-henrique-soares-da-luz-40b18b21a/" target="_blank" target="_blank"> Pedro
+      Henhique </a>
+  </p>
+</footer>
 
-  <footer>
-    <p>Projeto final | Blue | M02</br>
-      <a href="https://www.linkedin.com/in/danusajesus" target="_blank" target="_blank">Danusa Jesus</a> |
-      <a href="https://www.linkedin.com/in/pedro-henrique-soares-da-luz-40b18b21a/" target="_blank" target="_blank"> Pedro Henhique </a>
-    </p>
-  </footer>
-
-  <script src="../js/fixed-responsive-nav.js"></script>
-  <script src="../js/responsive-nav.js"></script>
-  <script src="/js/nav.js"></script>
-  <script src="/js/script.js"></script>
+<script src="../js/fixed-responsive-nav.js"></script>
+<script src="../js/responsive-nav.js"></script>
+<script src="/js/nav.js"></script>
+<script src="/js/script.js"></script>
 </body>
 
 </html>
