--- a/views/index.ejs
+++ b/views/index.ejs
@@ -3,6 +3,7 @@
 
 <head>
   <meta charset="UTF-8">
+  <meta charset="utf-8" />
   <meta content="width=device-width, initial-scale=1, maximum-scale=1" name="viewport">
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -67,7 +68,7 @@
     <section class="card">
       <ul>
         <li>Nome: <%= item.nome %></li>
-        <li>Descrição: <%= item.descricao %></li>
+        <li>Genero: <%= item.genero %></li>
         <a href="/detalhes/<%= item.id %>">
           <img src="<%= item.imagem %>" width=200>
         </a>
