--- a/views/detalhes.ejs
+++ b/views/detalhes.ejs
@@ -3,6 +3,7 @@
 
 <head>
   <meta charset="UTF-8">
+  <meta charset="utf-8" />
   <meta content="width=device-width, initial-scale=1, maximum-scale=1" name="viewport">
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -40,7 +41,9 @@
         <li>Genero: <%= jogo.genero %></li>
         <li>Descrição: <%= jogo.descricao %></li>
         <form action="/deletar/<%= jogo.id %>" method="POST">
-          <button type="submit">Deletar</button>
+          <input type="hidden" name="_method" value="DELETE"> 
+          <input type="hidden" name="_token" value="the_token">
+          <button type="submit" class="btn btn-link" onclick="if (!confirm('Are you sure?')) { return false }"><span>Delete</span></button>
         </form>
       </ul>
     </div>
