--- a/views/index.ejs
+++ b/views/index.ejs
@@ -12,7 +12,7 @@
   <link rel="stylesheet" href="./css/style.css">
   <link rel="stylesheet" href="./css/nav.css">
   <link rel="stylesheet" href="./css/carousel.css">
-  <title>Game Catalogo</title>
+  <title>Game Catálogo</title>
 </head>
 
 <body>
