--- a/views/index.ejs
+++ b/views/index.ejs
@@ -12,13 +12,13 @@
   <link rel="stylesheet" href="./css/style.css">
   <link rel="stylesheet" href="./css/nav.css">
   <link rel="stylesheet" href="./css/carousel.css">
-  <title>Game Catálogo</title>
+  <title>Catálogo de jogos</title>
 </head>
 
 <body>
 
   <article>
-    <a class="logo " href="/" data-scroll>Game Catalogo</a>
+    <a class="logo " href="/" data-scroll>Catálogo de jogos</a>
 
     <nav class="nav-collapse">
       <ul>
